Made relevant changes for adding background script
Created a background.js file that will run as a background script -
indicated it in the manifest.json and made functions in scrollpad.js to
call approporate methods of the background script

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
       "js": [ "jquery.js", "scrollpad.js"],
       "matches": [ "\u003Call_urls\u003E" ]
   } ],
+  "background": { "scripts": ["background.js"] },
   "name": "ScrollPad",
   "version": "1.0",
   "description": "Scroll long webpages easy way",
