Added Options Page
Created options.html page for Options UI, options.js to save, load and
reset options. Reset options require communication with background
script, so made appropritate changes in background.js. Finally added
options page to manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
       "matches": [ "\u003Call_urls\u003E" ]
   } ],
   "background": { "scripts": ["background.js"] },
+  "options_page": "options.html",
   "name": "ScrollPad",
   "version": "1.0",
   "description": "Scroll long webpages easy way",
