--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
   "manifest_version": 2,
   "content_scripts": [ { 
-      "js": [ "jquery.js","drag.js", "scrollpad.js"],
+      "js": [ "lib/jquery.js","lib/drag.js", "lib/scrollpad.js"],
       "matches": [ "\u003Call_urls\u003E" ]
   } ],
-  "background": { "scripts": ["background.js"] },
-  "options_page": "options.html",
+  "background": { "scripts": ["lib/background.js"] },
+  "options_page": "views/options.html",
   "name": "ScrollPad",
   "version": "1.0",
   "description": "Scroll long webpages easy way",
   "icons": {
-    "128": "128.png"
+    "128": "assets/images/128.png"
   }
 }
