--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,10 @@
 {
   "manifest_version": 2,
   "content_scripts": [ { 
-      "js": [ "lib/jquery.js","lib/drag.js", "lib/scrollpad.js"],
+      "js": [ "lib/jquery.js","lib/drag.js", 
+              "lib/scrollpad.js",
+              "lib/vendor/jscolor/jscolor.js"
+            ],
       "matches": [ "\u003Call_urls\u003E" ]
   } ],
   "background": { "scripts": ["lib/background.js"] },
